# pattern

./: Cargo.toml  LICENSE  README.md  build.rs  commit_msg.txt  run.sh  wl-info.txt
.cargo/: config.toml
protocols/: wayland.xml  xdg-shell.xml
protocols/staging/xdg-session-management/: xdg-session-management-v1.xml
src/: backend.rs  lib.rs  main.rs
src/animation/: math.rs  mod.rs  tree.rs
src/config/: default_init.lua  keybinds.rs  mod.rs  pattern.meta.lua
src/gpu/: buffer.rs  mod.rs
src/input/: bindings.rs  mod.rs
src/server/: cursor_loader.rs  definition.rs  mod.rs
src/server/proto/: compositor.rs  cursor_shape.rs  cursor_shape_utils.rs  data_control.rs  decoration.rs  dmabuf.rs  fifo.rs  gamma_control.rs  input_method.rs  layer_shell.rs  linux_drm_syncobj.rs  mod.rs  output.rs  pointer_constraints.rs  pointer_gestures.rs  pointer_warp.rs  presentation.rs  primary_selection.rs  relative_pointer.rs  seat.rs  session_lock.rs  shm.rs  subcompositor.rs  text_input.rs  viewporter.rs  virtual_keyboard.rs  workspace.rs  xdg_activation.rs  xdg_dialog.rs  xdg_shell.rs
src/shaders/: blur.frag  cursor.vert  kawase_down.frag  kawase_up.frag  quad.frag  quad.vert  shadow.frag  solid.frag
src/styler/: mod.rs  style.rs
src/utils/: desktop.rs  mod.rs  time.rs
src/vulkan/: frame.rs  mod.rs
src/wm/: mod.rs
src/wm/impls/: floating_wm.rs  mod.rs
