[package]
name = "pattern"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
ash = "0.38.0"
dirs = "6.0.0"
drm = "0.15.0"
gbm = "0.18.0"
gbm-sys = "0.4.0"
input = "0.10.0"
libc = "0.2.184"
libdisplay-info = "0.3.0"
libloading = "0.9.0"
libseat = "0.2.4"
memmap2 = "0.9.10"
nix = { version = "0.31.2", features = ["event", "fs", "time"] }
rand = "0.10.1"
resvg = "0.47.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
udev = "0.9.3"
wayland-protocols = { git = "https://github.com/Smithay/wayland-rs.git", features = ["server", "unstable", "staging"], version = "0.32.12" }
wayland-protocols-wlr = { git = "https://github.com/Smithay/wayland-rs.git", features = ["server"] }
wayland-server = { git = "https://github.com/Smithay/wayland-rs.git" }
xcursor = "0.3.10"
xkbcommon = "0.9.0"

[build-dependencies]
